# Algorithms_HW2

./: README.md
Algorithms_HW2/: CMakeLists.txt  main.cpp
Algorithms_HW2/Algorithms/: kmp.cpp  kmp.h  naive.cpp  naive.h
Algorithms_HW2/Executors/: additional_char_executor.cpp  additional_char_executor.h  ordinary_executor.cpp  ordinary_executor.h
Algorithms_HW2/Utilities/: string_generator.cpp  string_generator.h
additional_char/: 219_КузнецовМВ_output_2_100000_1.csv  219_КузнецовМВ_output_2_100000_2.csv  219_КузнецовМВ_output_2_100000_3.csv  219_КузнецовМВ_output_2_100000_4.csv  219_КузнецовМВ_output_2_10000_1.csv  219_КузнецовМВ_output_2_10000_2.csv  219_КузнецовМВ_output_2_10000_3.csv  219_КузнецовМВ_output_2_10000_4.csv  219_КузнецовМВ_output_4_100000_1.csv  219_КузнецовМВ_output_4_100000_2.csv  219_КузнецовМВ_output_4_100000_3.csv  219_КузнецовМВ_output_4_100000_4.csv  219_КузнецовМВ_output_4_10000_1.csv  219_КузнецовМВ_output_4_10000_2.csv  219_КузнецовМВ_output_4_10000_3.csv  219_КузнецовМВ_output_4_10000_4.csv
charts/additional_char/Numbers/: 219_КузнецовМВ_output_2_100000_1.numbers  219_КузнецовМВ_output_2_100000_2.numbers  219_КузнецовМВ_output_2_100000_3.numbers  219_КузнецовМВ_output_2_100000_4.numbers  219_КузнецовМВ_output_2_10000_1.numbers  219_КузнецовМВ_output_2_10000_2.numbers  219_КузнецовМВ_output_2_10000_3.numbers  219_КузнецовМВ_output_2_10000_4.numbers  (+8 more)
ordinary/: 219_КузнецовМВ_output_2_10000.csv  219_КузнецовМВ_output_2_100000.csv  219_КузнецовМВ_output_4_10000.csv  219_КузнецовМВ_output_4_100000.csv
(+4 files in other folders)
